Updating 429 logic to allow for both a max retry count and max elapsed time
values less than zero disables the individual check, allowing for user to use one check or the other, both, or neither.

--- a/impl/src/main/resources/com/okta/sdk/config/okta.yaml
+++ b/impl/src/main/resources/com/okta/sdk/config/okta.yaml
@@ -29,6 +29,6 @@ okta:
       host:
       username:
       password:
-    retry:
-      maxElapsed: 70
-      rateLimitMaxOffset: 10
+    requestTimeout: 0
+    rateLimit:
+      maxRetries: 4
