--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>5</version>
+        <version>6-SNAPSHOT</version>
         <relativePath>../okta-java-parent</relativePath>
     </parent>
 
@@ -285,6 +285,13 @@
                             <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.okta</groupId>
+                    <artifactId>okta-code-snippet-maven-plugin</artifactId>
+                    <configuration>
+                        <sourceFile>examples/quickstart/src/main/java/quickstart/ReadmeSnippets.java</sourceFile>
                     </configuration>
                 </plugin>
             </plugins>
