Update guava to v27.0.1
NOTE: Guava is a transitive dependency. v20.x was getting pulled in from `swagger-codegen`, this version has a CVE
This CVE does NOT effect this project as Guava is ONLY used at build time, but updating the version is _cleaner_ than adding an exclusion
The GAV is also different, around v23 they changed to x.x-(android|jre), hence needing to use a dependency exclusion

--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -32,7 +32,6 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-codegen</artifactId>
@@ -42,23 +41,26 @@
                     <groupId>commons-logging</groupId>
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
+                <exclusion>
+                    <!-- replace guava with newer (which has a different GAV) -->
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
-
     </dependencies>
-
-    <build>
-        <plugins>
-        </plugins>
-    </build>
-
 </project>
