--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <snakeyaml.version>1.17</snakeyaml.version>
         <jjwt.version>0.6.0</jjwt.version>
         <okta.sdk.pereviousVersion>1.0.0</okta.sdk.pereviousVersion>
-        <otka.commons.version>1.1.0-SNAPSHOT</otka.commons.version>
+        <otka.commons.version>1.1.0</otka.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
