--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -46,6 +46,10 @@
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-ext</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
