Made yaml properties source optional for downstream dependencies
The actual Maven dependency scope is still compile, this keeps things both backwards compatible and allows for the ~/.okta/okta.yaml parsing by default

- minor code cleanup (based on IDE linting)
- fixed incorrect javadoc in DefaultClientBuilder

--- a/impl/src/main/resources/com/okta/sdk/config/okta.properties
+++ b/impl/src/main/resources/com/okta/sdk/config/okta.properties
@@ -14,21 +14,16 @@
 # limitations under the License.
 #
 
-okta:
-  client:
-    token:
-    connectionTimeout: 30
-    authenticationScheme: SSWS
-    cache:
-      enabled: true
-      defaultTtl: 300
-      defaultTti: 300
-    baseUrl:
-    proxy:
-      port:
-      host:
-      username:
-      password:
-    requestTimeout: 0
-    rateLimit:
-      maxRetries: 4
+okta.client.baseUrl =
+okta.client.token =
+okta.client.connectionTimeout = 30
+okta.client.authenticationScheme = SSWS
+okta.client.requestTimeout = 0
+okta.client.rateLimit.maxRetries = 4
+okta.client.cache.enabled = true
+okta.client.cache.defaultTtl = 300
+okta.client.cache.defaultTti = 300
+okta.client.proxy.port =
+okta.client.proxy.host =
+okta.client.proxy.username =
+okta.client.proxy.password =
