--- a/httpclients/httpclient/pom.xml
+++ b/httpclients/httpclient/pom.xml
@@ -22,6 +22,7 @@
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
         <version>1.4.0-SNAPSHOT</version>
+        <relativePath>../..</relativePath>
     </parent>
 
     <artifactId>okta-sdk-httpclient</artifactId>
