--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ deploy:
   email: developers@okta.com
   name: Travis CI - Auto Doc Build
   on:
+    jdk: oraclejdk8
     branch: master
     condition: "$TRAVIS_EVENT_TYPE != cron"
 
