--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -1,3 +1,18 @@
+#
+# Copyright 2020-Present Okta, Inc.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 swagger: '2.0'
 info:
   title: Okta API
@@ -2491,7 +2506,7 @@ paths:
           type: string
         - description: Filter expression for groups
           in: query
-          name: filter
+          name: search
           type: string
         - description: Specifies the pagination cursor for the next page of groups
           in: query
@@ -7352,6 +7367,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/NetworkZone'
       security:
         - api_token: []
       summary: Activate Network Zone
@@ -7373,6 +7390,8 @@ paths:
       responses:
         '200':
           description: Success
+          schema:
+            $ref: '#/definitions/NetworkZone'
       security:
         - api_token: []
       summary: Deactivate Network Zone
