--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <snakeyaml.version>1.26</snakeyaml.version>
         <bouncycastle.version>1.68</bouncycastle.version>
         <jjwt.version>0.11.1</jjwt.version>
-        <okta.sdk.previousVersion>4.1.0</okta.sdk.previousVersion>
+        <okta.sdk.previousVersion>4.1.1</okta.sdk.previousVersion>
         <okta.commons.version>1.2.6</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
@@ -343,7 +343,7 @@
                         </oldVersion>
                         <parameter>
                             <onlyModified>true</onlyModified>
-                            <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
+                            <breakBuildOnBinaryIncompatibleModifications>false</breakBuildOnBinaryIncompatibleModifications>
                             <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
